@@ -57,6 +57,7 @@ Verilator 5.033 devel
 * Fix ignoring joins in stringify in preprocessor (#5777). [Krzysztof Bieganski, Antmicro Ltd.]
 * Fix unpacked split_var (#5782) (#5785). [Yutetsu TAKATSUKASA]
 * Fix time import error on time parameters (#5786). [Luca Colagrande]
+* Fix `$monitor` with dotted references (#5794). [Ahmed Elzeftawi]
 * Fix matching language extension options including dots.
 
 
